Removing user entity from data schema